<resources>
    <string name="app_name">KodikDownloader</string>
    <string name="put_id_hint">Put your %s id</string>
    <string name="put_name_hint">Put your title name</string>
    <string name="search_reqest">Search</string>
    <string name="season_hint">season %d</string>
    <string name="episodes">Episodes</string>
    <string name="episode_hint">Episode %d</string>
    <string name="quality_choser_title">Select video quality</string>
    <string name="found_hint">Found %d results</string>
    <string name="not_found_hint">Not found</string>
    <string name="dvget_not_found">DVGet not installed</string>
    <string name="idm_not_found">IDM not installed</string>
    <string name="about">About</string>
    <string name="about_text">The app for downloading content from Kodik service\nVersion: %s (%s)</string>
    <string name="menu_downloder">Used dowloader</string>
    <string name="menu_downloder_adm">ADM</string>
    <string name="menu_downloder_idm">IDM</string>
    <string name="menu_downloder_browser">Browser</string>
    <string name="batch_download_avaliable_only_on_idm">Batch download mode available only on IDM</string>
	 <string name="download_selected">Download Selected</string>
    
    <string-array name="methods_array">
        <item>Title</item>
        <item>Shikimori</item>
        <item>Kinopoisk</item>
        <item>IMdb</item>
    </string-array>
	
    <plurals name="episode_hint">
        <item quantity="one">%d episode</item>
        <item quantity="two">%d episodes</item>
        <item quantity="few">%d episodes</item>
        <item quantity="many">%d episodes</item>
		<item quantity="other">%d episodes</item>
    </plurals>
</resources>
